@startuml
skinparam classAttributeIconSize 0
left to right direction

package ui {
class SetPaymentsDatetimeUI {}
}

package controller {
class SetPaymentsDatetimeController {
  +getOrganization()
  +registerPaymentsDatetime(day,hour,min)
}
}

package login {
class LoginSystem {
  +getLoggedUserEmail()
}
}
package model {
class Platform {
  +getRegistryOrganizations()
}

package registry {
class RegistryOrganizations {
  +getOrgByUserEmail(email)
}
}

class Organization {
  -String orgName
  -int paymentDay
  -int paymentHour
  -int paymentMinute
  +getListCollaborators()
  +registerPaymentsDatetime(day,hour,min)
  +validDatetime(day,hour,min)
  +setPaymentsDatetime(day,hour,min)
}

class Collaborator {
  -String name
  -String email
  +hasEmail(email)
}

class Manager {
  -String name
  -String email
  +hasEmail(email)
}
}

SetPaymentsDatetimeUI ..> SetPaymentsDatetimeController
SetPaymentsDatetimeController ..> LoginSystem
SetPaymentsDatetimeController ..> Platform
SetPaymentsDatetimeController ..> RegistryOrganizations
SetPaymentsDatetimeController ..> Organization
Platform "1" --> "1" RegistryOrganizations: has
RegistryOrganizations "1" --> "*" Organization: has
Organization "1" --> "1" Collaborator: has
Organization "1" --> "1" Manager: has

@enduml
